# ndp

./: .gitignore  check_classes.py  check_data.py  cli_diffvit.py  cli_main.py  cli_multi.py  cli_multi_mono.py  cli_ndpvit.py  cli_single.py  combine.py  config.yaml  cut.py  evaluate_fid.py  generate_fid.py  god_eye_view.ipynb  hello.py  imagenet.py  imagenet_64.py  main.py  ndpvit_test.ipynb  pyproject.toml  pyrightconfig.json  requirements.txt  sampling_test.ipynb  tinyimagenet.py  tokenize_data.py  tokenizer_generate_fid.py  tokenizer_test.ipynb  torch_cuda_check.py  train.py  util.py  vqgan.sh  vqgan_1364.err  vqgan_1365.err  vqgan_multi.sh  vqgan_single copy.sh
configs/: cifar10.yaml  custom_vqgan.yaml  diffvit.yaml  diffvit2.yaml  diffvit3.yaml  imagenet.yaml  imagenet_128.yaml  imagenet_128_16384_16.yaml  imagenet_256_16384_16.yaml  imagenet_256_32768_16.yaml  imagenet_256_8192_16.yaml  imagenet_64_16384_16.yaml  ndpvit.yaml  ndpvit2.yaml  ndpvit3.yaml  ndpvit4.yaml  ndpvit_b.yaml  ndpvit_test.yaml  tinyimagenet.yaml  tinyimagenet2.yaml  tinyimagenet_1.yaml
configs/gpt/: imagenet_64_12.yaml  imagenet_64_12_ndp.yaml  imagenet_64_16384_16.yaml  imagenet_64_16_ndp.yaml
configs/llama/: imagenet_64_12_ndp.yaml
data/: ade20k.py  annotated_objects_coco.py  annotated_objects_dataset.py  annotated_objects_open_images.py  base.py  coco.py  custom.py  faceshq.py  image_transforms.py  imagenet.py  utils.py
data/conditional_builder/: objects_bbox.py  objects_center_points.py  utils.py
icml2025/: example_paper.blg  example_paper.tex
models/: cond_transformer.py  dummy_cond_stage.py  gpt.py  llama.py  old.py  vit.py  vqgan.py
modules/: muon.py
modules/losses/: lpips.py  vqperceptual.py
modules/vqvae/: quantize.py
scripts/: extract_depth.py  extract_segmentation.py  make_scene_samples.py  sample_fast.py  taming-transformers.ipynb
tinyimagenet/: config.yaml
